traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:13: error: ')' expected but '.' found.
  else if (getDirection==()Direction.EST)
                                    ^Snake:20: error: illegal start of simple expression
  return (false);}
                 ^